add haskell exercise sessions

--- a/header.tex
+++ b/header.tex
@@ -23,7 +23,7 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 \lstset{frame=tb,
-  language=Lisp,
+  language=Haskell,
   aboveskip=3mm,
   belowskip=3mm,
   showstringspaces=false,
