--- a/main.tex
+++ b/main.tex
@@ -17,19 +17,14 @@
 
 {\Large{\textbf{Principle of Programming Languages}}}
 
-
+\section{Scheme}
 \input{scheme/scheme.tex}
 \input{scheme/exercise-session.tex}
 
+\section{Haskell}
+\input{haskell/exercise-session.tex}
+
 
 \rule{0.3\linewidth}{0.25pt}
-\scriptsize\\
-Politecnico di Milano, A.A. 2019/20
-\vfill\null 
-\columnbreak
-\vfill\null
-\columnbreak
-\vfill\null
-\columnbreak
 \end{multicols}
 \end{document}
