--- a/header.tex
+++ b/header.tex
@@ -12,6 +12,7 @@
 \usepackage{textcomp}
 \usepackage{todonotes}
 \usepackage{lastpage}
+\usepackage{graphicx}
 
 \geometry{top=.5in,left=.5in,right=.5in,bottom=.5in,headsep=0in}
 
@@ -21,23 +22,6 @@
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
-
-\lstset{frame=tb,
-  language=Haskell,
-  aboveskip=3mm,
-  belowskip=3mm,
-  showstringspaces=false,
-  columns=flexible,
-  basicstyle={\small\ttfamily},
-  numbers=none,
-  numberstyle=\tiny\color{gray},
-  keywordstyle=\color{blue},
-  commentstyle=\color{dkgreen},
-  stringstyle=\color{mauve},
-  breaklines=true,
-  breakatwhitespace=true,
-  tabsize=3
-}
 
 \geometry{top=.5in,left=.5in,right=.5in,bottom=.5in,headsep=0in}
 
