--- a/erlang/exams.tex
+++ b/erlang/exams.tex
@@ -1,3 +1,46 @@
+\subsection{2020-02-07}
+We want to create a simplified implementation of the “Reduce” part of the MapReduce paradigm. To this
+end, define a process “reduce\_manager” that keeps track of a pool of reducers. When it is created, it
+stores a user-defined associative binary function ReduceF. It receives messages of the form {reduce,
+Key, Value}, and forwards them to a different “reducer” process for each key, which is created lazily
+(i.e. only when needed). Each reducer serves requests for a unique key.
+Reducers keep into an accumulator variable the result of the application of ReduceF to the values they
+receive. When they receive a new value, they apply ReduceF to the accumulator and the new value,
+updating the former. When the reduce\_manager receives the message print\_results, it makes all its
+reducers print their key and incremental result.\\
+Solution:
+\begin{lstlisting}
+	start_reduce_mgr(ReduceF) ->
+		spawn(?MODULE, reduce_mgr, [ReduceF, #{}]).
+	
+	reduce_mgr(ReduceF, Reducers) ->
+		receive
+			print_results ->
+				lists:foreach(fun ({_, RPid}) -> RPid ! print_results end, maps:to_list(Reducers));
+			{reduce, Key, Value} ->
+				case Reducers of
+					#{Key := RPid} ->
+						RPid ! {Key, Value},
+						reduce_mgr(ReduceF, Reducers);
+					_ ->
+						NewReducer = spawn(?MODULE, reducer, [ReduceF, Key, Value]),
+						reduce_mgr(ReduceF, Reducers#{Key => NewReducer})
+			end
+		end.
+	
+	reducer(ReduceF, Key, Result) ->
+		receive
+			print_results ->
+				io:format("~s: ~w~n", [Key, Result]);
+			{Key, Value} ->
+				reducer(ReduceF, Key, ReduceF(Result, Value))
+		end.
+\end{lstlisting}
+
+
+
+
+
 \subsection{2020-01-15}
 We want to implement something like Python's \texttt{range} in Erlang, using processes. \\
 E.g. 
