Added Erlang theory

--- a/erlang.tex
+++ b/erlang.tex
@@ -35,8 +35,11 @@
 {\Large{\textbf{Principle of Programming Languages}}}
 
 \section{Erlang}
+\input{erlang/erlang.tex}
+
 \section{Exams}
 \input{erlang/exams.tex}
+
 \section{Exercise session}
 \input{erlang/exercise-session.tex}
 
