Added Haskell theory

--- a/haskell.tex
+++ b/haskell.tex
@@ -35,11 +35,13 @@
 {\Large{\textbf{Principle of Programming Languages}}}
 
 \section{Haskell}
+\input{haskell/haskell.tex}
+
 \section{Exams}
 \input{haskell/exams.tex}
+
 \section{Exercise session}
 \input{haskell/exercise-session.tex}
-
 
 \rule{0.3\linewidth}{0.25pt}
 \end{multicols}
